--- a/css/mobile.css
+++ b/css/mobile.css
@@ -15,6 +15,19 @@
         font-family: 'Karla', sans-serif;
     }
 
+    body::-webkit-scrollbar {
+        width: 0.8rem;
+    }
+
+    body::-webkit-scrollbar-track-piece {
+        margin: 0.2rem 0;
+    }
+
+    body::-webkit-scrollbar-thumb {
+        border-radius: 2rem;
+        background-color: hsl(256, 26%, 20%);
+    }
+
     #iconMenu > span:is(:first-child, :last-child) {
         rotate: 0;
         transition: rotate 300ms, transform 400ms 300ms;
