--- a/css/tailwin.css
+++ b/css/tailwin.css
@@ -430,6 +430,19 @@ html {
   font-family: 'Karla', sans-serif;
 }
 
+body::-webkit-scrollbar {
+  width: 0.8rem;
+}
+
+body::-webkit-scrollbar-track-piece {
+  margin: 0.2rem 0;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 2rem;
+  background-color: hsl(256, 26%, 20%);
+}
+
 #iconMenu > span:is(:first-child, :last-child) {
   rotate: 0;
   transition: rotate 300ms, transform 400ms 300ms;
@@ -558,6 +571,10 @@ html {
   bottom: -40%;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -572,14 +589,6 @@ html {
 
 .top-10 {
   top: 10rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-2 {
-  bottom: 2rem;
 }
 
 .z-10 {
@@ -685,10 +694,6 @@ html {
   height: calc(100vh - 10rem);
 }
 
-.min-h-screen {
-  min-height: 100vh;
-}
-
 .w-2 {
   width: 2rem;
 }
@@ -725,22 +730,6 @@ html {
   width: 100%;
 }
 
-.w-9 {
-  width: 2.25rem;
-}
-
-.w-64 {
-  width: 16rem;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.max-w-md {
-  max-width: 28rem;
-}
-
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -762,11 +751,6 @@ html {
 
 .translate-y-0\.7 {
   --tw-translate-y: 0.7rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[360deg\] {
-  --tw-rotate: 360deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -807,10 +791,6 @@ html {
 
 .gap-y-1 {
   row-gap: 1rem;
-}
-
-.gap-y-2 {
-  row-gap: 2rem;
 }
 
 .gap-y-3 {
@@ -935,11 +915,6 @@ html {
 .text-zinc-400 {
   --tw-text-opacity: 1;
   color: rgb(161 161 170 / var(--tw-text-opacity));
-}
-
-.blur-0 {
-  --tw-blur: blur(0);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-all {
