--- a/css/tailwin.css
+++ b/css/tailwin.css
@@ -694,6 +694,10 @@ body::-webkit-scrollbar-thumb {
   height: calc(100vh - 10rem);
 }
 
+.max-h-screen {
+  max-height: 100vh;
+}
+
 .w-2 {
   width: 2rem;
 }
