save the file config

--- a/css/tailwin.css
+++ b/css/tailwin.css
@@ -698,6 +698,18 @@ body::-webkit-scrollbar-thumb {
   max-height: 100vh;
 }
 
+.max-h-96 {
+  max-height: 24rem;
+}
+
+.max-h-\[35rem\] {
+  max-height: 35rem;
+}
+
+.max-h-\[40rem\] {
+  max-height: 40rem;
+}
+
 .w-2 {
   width: 2rem;
 }
@@ -937,6 +949,16 @@ body::-webkit-scrollbar-thumb {
     background-color: hsl(270 9% 17% / var(--tw-bg-opacity));
   }
 
+  .hover\:bg-violet:hover {
+    --tw-bg-opacity: 1;
+    background-color: hsl(256 26% 20% / var(--tw-bg-opacity));
+  }
+
+  .hover\:bg-white:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
   .hover\:text-violet-200:hover {
     --tw-text-opacity: 1;
     color: hsl(270 9% 17% / var(--tw-text-opacity));
@@ -946,15 +968,64 @@ body::-webkit-scrollbar-thumb {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
+
+  .hover\:text-transparent:hover {
+    color: transparent;
+  }
+
+  .hover\:text-violet:hover {
+    --tw-text-opacity: 1;
+    color: hsl(256 26% 20% / var(--tw-text-opacity));
+  }
 }
 
 @media (min-width: 900px) {
+  .sm\:absolute {
+    position: absolute;
+  }
+
   .sm\:relative {
     position: relative;
   }
 
   .sm\:top-0 {
     top: 0px;
+  }
+
+  .sm\:top-50 {
+    top: 50%;
+  }
+
+  .sm\:top-8 {
+    top: 8rem;
+  }
+
+  .sm\:right-\[10\%\] {
+    right: 10%;
+  }
+
+  .sm\:right-\[5\%\] {
+    right: 5%;
+  }
+
+  .sm\:z-10 {
+    z-index: 10;
+  }
+
+  .sm\:m-0 {
+    margin: 0px;
+  }
+
+  .sm\:ml-\[5\%\] {
+    margin-left: 5%;
+  }
+
+  .sm\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .sm\:ml-0 {
+    margin-left: 0px;
   }
 
   .sm\:flex {
@@ -965,8 +1036,20 @@ body::-webkit-scrollbar-thumb {
     display: none;
   }
 
+  .sm\:aspect-video {
+    aspect-ratio: 16 / 9;
+  }
+
   .sm\:h-10 {
     height: 10rem;
+  }
+
+  .sm\:h-64 {
+    height: 16rem;
+  }
+
+  .sm\:h-96 {
+    height: 24rem;
   }
 
   .sm\:w-60 {
@@ -977,6 +1060,26 @@ body::-webkit-scrollbar-thumb {
     width: auto;
   }
 
+  .sm\:w-90 {
+    width: 90%;
+  }
+
+  .sm\:max-w-3xl {
+    max-width: 48rem;
+  }
+
+  .sm\:max-w-2xl {
+    max-width: 42rem;
+  }
+
+  .sm\:max-w-xl {
+    max-width: 36rem;
+  }
+
+  .sm\:max-w-xs {
+    max-width: 20rem;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
@@ -985,9 +1088,18 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
   }
 
+  .sm\:justify-between {
+    justify-content: space-between;
+  }
+
   .sm\:gap-x-3 {
     -moz-column-gap: 3rem;
          column-gap: 3rem;
+  }
+
+  .sm\:gap-x-2 {
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 
   .sm\:border-violet-200 {
@@ -1001,6 +1113,10 @@ body::-webkit-scrollbar-thumb {
 
   .sm\:p-0 {
     padding: 0px;
+  }
+
+  .sm\:text-start {
+    text-align: start;
   }
 
   .sm\:text-sm {
